# ponysay-rust

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: rust.yml
src/: main.rs  mane.rs  pony.rs
tests/: cli.rs
