[package]
name = "ponysay"
version = "0.1.0"
authors = ["Evan Tatarka <evan@tatarka.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { git = "https://github.com/clap-rs/clap/", default-features = false, features = ["std", "derive"] }
term_grid = "0.1.7"
term_size = "0.3.1"
rand = "0.7.3"
nom = "5.1.1"
textwrap = "0.11"
unicode-width = "0.1.5"
atty = "0.2.14"

[dev-dependencies]
assert_cmd = "0.12.0"

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
codegen-units = 1
